[package]
name = "gopher-core"
version = "0.3.0"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT / Apache-2.0"
description = "A library implementing the Internet Gopher protocol"
repository = "https://github.com/mbrubeck/gopher-rs"
documentation = "https://docs.rs/gopher-core"
keywords = ["gopher", "client", "server", "tokio", "protocol"]
categories = ["network-programming"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"

[dev-dependencies]
tokio-service = "0.1"
